--- a/HospitalManagementSystem-FinalProject/src/main/resources/application.properties
+++ b/HospitalManagementSystem-FinalProject/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/hospital_management_system
-spring.datasource.username=root
-spring.datasource.password=UOB@root
+spring.datasource.url=jdbc:mariadb://localhost:3306/your_database_name
+spring.datasource.username=your_username
+spring.datasource.password=your_password
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
